# layoutc

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/: copilot-instructions.md
src/layoutc/entity/: README.md  json.py
src/layouts/: NXL-Barcelona-2019.json  NXL-Chicago-2019.json  NXL-European-Champs-2021.json  NXL-Golden-State-Open-2022.json  NXL-Las-Vegas-2019.json  NXL-Lone-Star-Open-2022.json  NXL-Mid-Atlantic-Major-2021.json  NXL-Mid-Atlantic-Major-2022.json  NXL-Paris-2019.json  NXL-Philly-2019.json  NXL-Prague-2019.json  NXL-Prague-Open-2020.json  NXL-Sunshine-State-Major-2021.json  NXL-Sunshine-State-Major-2022.json  NXL-Texas-2019.json  NXL-Windy-City-Major-2021.json  NXL-Windy-City-Major-2022.json  NXL-World-Cup-2018.json  NXL-World-Cup-2019.json  NXL-World-Cup-2020.json  NXL-World-Cup-2021.json
tests/: conftest.py
tests/layout/: 00.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  11.json  12.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  25.json
